--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "RaiHogar Limpieza and Servicios de Hogar ofrece un servicio impeca
 # Team names, titles and social links
 people:
 - name: Raimunda Rodrigues Goncalves
-  pic: 1
+  pic: raimunda2
   position: Professional de Servicio de Hogar
   
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
