--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/raihogar
+    url: http://twitter.com/HogarRai
 
 
 # Postal address (add as many lines as necessary)
