Changed and to y

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
 # Site settings
-title: RaiHogar - Limpieza and Servicios de Hogar en Torremolinos
+title: RaiHogar - Limpieza y Servicios de Hogar en Torremolinos
 email: rai@raihogar.com
-description: "Limpieza and Servicios de Hogar: Ofrecemos un servicio impecable de Limpieza y Servicios de Hogar como cuidado de ropa, lavado y planchado"
+description: "Limpieza y Servicios de Hogar: Ofrecemos un servicio impecable de Limpieza y Servicios de Hogar como cuidado de ropa, lavado y planchado"
 
 
 # Team names, titles and social links
